# serde_catch_all

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs
